# Parallel-Dragonfly-Alg-Spring-CS495

./: OpenMP.docx  Pop_Fun_Times.xlsx  system_sum.txt  unloop.csv
Code/: ArrayMem.c  ArrayMem.h  CMakeLists.txt  DA.c  DA.h  DAFile.txt  Functions.c  Functions.h  SelectFunctions.c  SelectFunctions.h  Util.c  Util.h  main.c
Reports/: OpenMP.docx  Parallelizing DA.docx
